# ConvoTree

./: .env.development  .env.local.example  .env.production  .eslintignore  .eslintrc-local.cjs  .eslintrc.json  .firebaserc  .gitignore  .jscpd.json  CLAUDE.md  README.md  firebase.json  firestore.rules  knip.json  next.config.mjs  package-lock.json  package.json  project.config.mjs  tsconfig.json
.serena/: project.yml
app/: globals.css  layout.tsx  page.tsx
components/: LoadingFallback.tsx  branch-structure.tsx  branching-chat-ui.tsx  data-source-menu-action.tsx  data-source-toggle.tsx  debug-console.tsx  firestore-debug.tsx  firestore-test.tsx  footer-navigation.tsx  hamburger-menu.tsx  line-history-menu.tsx  message-crud-test.tsx  offline-banner.tsx  recent-lines-footer.tsx  slash-command-buttons.tsx  tag-crud-test.tsx  tag-edit-dialog.tsx  tag-management.tsx  timeline-view-footer.tsx
data_api/: .env.example  .gitignore  .jscpd.json  Makefile  README.md  analyze_domain_distribution.py  config.yaml.example  generate_embeddings.py  intent_clustering.py  intent_network.py  main.py  message_clustering.py  pyproject.toml
data_api/app/: __init__.py  cache.py  models.py  utils.py
data_api/app/pipelines/: pipeline1.py  pipeline2.py  pipeline3.py  pipeline4.py  pipeline5.py
data_api/doc/: analysis_intent_abstraction_issues.md  analysis_super_intent_results.md  architecture.md  goal_network_construction.md  prompt_engineering.md  test_report.md  test_report_improved.md
data_api/lib/: config.py  gemini_client.py  parse_error_handler.py  rag_models.py
data_api/lib/pipelines/: extraction_common.py  goal_extraction.py  goal_network_builder.py  goal_network_exporter.py  goal_relation_extraction.py  intent_extraction.py  message_clustering.py  rag_graph_extractor.py  rag_index_builder.py  rag_query_executor.py
data_api/scripts/: analyze_clustering_quality.py  analyze_goal_graph_importance.py  chatgpt_history_parser.py  claude_history_parser.py  cluster_analysis.py  gemini_history_parser.py  generate_intent_extraction_prompts.py  generate_report.py  generate_test_report.py  goal_network_builder.py  message_clustering.py  rag_query_app.py  run_clustering_with_report.py  run_goal_network.py  run_intent_clustering_with_report.py  run_intent_network.py  test_gemini_api.py  test_pipeline1_small.py  test_pipeline2_3_small.py  test_pipeline2_improved.py  test_pipeline5_group.py  test_pipeline5_with_report.py  visualize_goal_graph.py  visualize_goal_network.py  visualize_intent_clusters.py  visualize_message_clusters.py
data_api/scripts/config/: README.md  line_mapping.yaml.example
data_api/scripts/utils/: README.md  __init__.py  message_deduplication.py
data_api/templates/: README.md  goal_extraction_prompt.md  goal_network_extraction_prompt.md  intent_extraction_prompt.md  intent_grouping_prompt.md  intent_reassignment_prompt.md  rag_answer_prompt.md  rag_query_parser_prompt.md  ultra_sub_intent_relations_prompt.md
data_api/templates/common/: intent_object_common.md
doc/: README.md  architecture-enforcement.md  data-structure-migration.md  data-structure.md  debugging-principles.md  environment-configuration.md  firebase-setup-guide.md  firestore-test-component.md  postgresql-migration-plan.md  project-structure.md  repository-pattern-guide.md
eslint-local-rules/: index.js
eslint-rules/: index.js  no-direct-data-source.js
hooks/: use-branch-operations.ts  use-chat-data.ts  use-chat-state.ts  use-device-type.ts  use-input-operations.ts  use-lines.ts  use-message-drag-drop.ts  use-message-operations.ts  use-online-status.ts  use-window-width.ts
lib/: auth-context.tsx  branch-tree-builder.ts  chat-repository-context.tsx  config.ts  constants.ts  firebase.ts  (+13 more)
(+193 files in other folders)
