[project]
name = "data-api"
version = "0.1.0"
description = "Message Intent Analysis - Gemini API integration"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fugashi>=1.5.2",
    "google-generativeai>=0.8.5",
    "hdbscan>=0.8.40",
    "k-means-constrained>=0.7.6",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "unidic-lite>=1.0.8",
]

[project.scripts]
test-gemini = "test_gemini_api:main"
