[project]
name = "data-api"
version = "0.1.0"
description = "Message Intent Analysis - Gemini API integration"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fire>=0.7.1",
    "fugashi>=1.5.2",
    "google-generativeai>=0.8.5",
    "hdbscan>=0.8.40",
    "k-means-constrained>=0.7.6",
    "litellm>=1.79.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "unidic-lite>=1.0.8",
]

[project.scripts]
test-gemini = "test_gemini_api:main"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
    "ruff>=0.14.4",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.pylint.main]
disable = "all"
enable = "too-many-lines"

[tool.pylint.format]
max-module-lines = 500

[tool.deptry]
extend_exclude = ["output"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest"]  # pytest is dev dependency but used in test files
