[project]
name = "data-api"
version = "0.1.0"
description = "Message Intent Analysis - Gemini API integration"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "fire>=0.7.1",
    "fugashi>=1.5.2",
    "hdbscan>=0.8.40",
    "ipadic>=1.0.0",
    "joblib>=1.4.2",
    "k-means-constrained>=0.7.6",
    "litellm[caching]>=1.79.3",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "unidic-lite>=1.0.8",
]

[project.scripts]
test-gemini = "test_gemini_api:main"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pylint>=4.0.2",
    "ruff>=0.14.4",
    "types-pyyaml>=6.0.12.20250915",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.pylint.main]
disable = "all"
enable = "too-many-lines"

[tool.pylint.format]
max-module-lines = 500

[tool.deptry]
extend_exclude = ["output"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP002 = ["fugashi", "ipadic", "unidic-lite"]  # Used by transformers MecabTokenizer
DEP004 = ["pytest"]  # pytest is dev dependency but used in test files

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "B", "S", "C90", "PLR", "RET", "SIM"]
ignore = ["S101", "B008", "ANN204", "B017", "ANN201", "E501"]
preview = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ALL"]
"main.py" = ["PLR6301"]  # Fire CLI requires instance methods
"lib/config.py" = ["PLR0904"]  # Config class requires many properties

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50
max-returns = 6
max-nested-blocks = 4
max-locals = 15

